# project-management-2

./: .dockerignore  .gitignore  AGENT_SPEC.md  ARCHITECTURE_DIAGRAMS.md  Dockerfile  EVALS.md  IMPLEMENTATION_ROADMAP.md  ISOLATION_DESIGN.md  MAIN_REPORT.md  MEMORY_ARCHITECTURE.md  MODEL_DECISION.md  MULTI_AGENT_ARCHITECTURE.md  Makefile  OBSERVABILITY_DESIGN.md  OBSERVABILITY_LITE.md  POINT2_MODEL_EVAL_PLAN.md  QUICKSTART.md  README.md  RUN_LOCAL.md  SYSTEM_PROMPTS.md  TOOLS_AND_INTERFACES.md  WORK_PLAN.md  docker-compose.yml  pyproject.toml  q.md
evals/: GROUNDED_EVAL_RESULTS.md  GROUNDED_EVAL_SET.md  MODEL_EVAL_CASES.md
knowledge/: domain_guide.md  failure_modes.md  metrics_glossary.md  reporting_policy.md
skills/: grounded_reporting.md  self_check.md  sql_analytics.md  timeline_insights.md
src/music_agent/: __init__.py  agent_runtime.py  agents.py  cli.py  config.py  eval_runner.py  ingest.py  ollama_client.py  schema.py  semantic_memory.py  server.py  tools.py
src/music_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
