[project]
name = "music-agent"
version = "0.1.0"
description = "Local multi-agent music history analysis system"
requires-python = ">=3.9"
dependencies = [
  "duckdb>=1.1.0",
]

[project.scripts]
music-agent-build-db = "music_agent.cli:build_db_main"
music-agent-demo-tools = "music_agent.cli:demo_tools_main"
music-agent-answer = "music_agent.cli:answer_main"
music-agent-build-memory = "music_agent.cli:build_memory_main"
music-agent-serve = "music_agent.cli:serve_main"
music-agent-run-evals = "music_agent.cli:run_evals_main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
